Finalize notebooks, update pipeline, and clean project structure

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -39,15 +39,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2a741c05-24e6-4383-b08c-53cbcca82181",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Project root set to: D:\\Labmentix\\2nd Project\\Real_Estate_Investment_Advisor\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================\n",
     "# Project Setup & Imports (STANDARDIZED)\n",
     "# ============================================\n",
     "\n",
+    "import os \n",
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
@@ -75,7 +84,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Project imports\n",
-    "from src.features.build_features import validate_features\n",
+    "from src.features.build_features import validate_features, run_feature_pipeline\n",
     "from src.data.load import load_raw_data\n",
     "\n",
     "# Display settings\n",
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6efee26b-bb2f-472a-855e-23cff7c35bbc",
    "metadata": {},
    "outputs": [
@@ -332,7 +341,7 @@
        "4       Ready_to_Move  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "28ca6193-92e6-4ade-854f-694352fac46a",
    "metadata": {},
    "outputs": [
@@ -679,7 +688,7 @@
        "4                0               0              2.39                0.06  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "223db294-377c-4c9e-ba9f-43f8bb645e8c",
    "metadata": {},
    "outputs": [
@@ -996,7 +1005,7 @@
        "4                0               0              2.39                0.06  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,19 +1044,6 @@
     "- Saved the final **feature-only dataset** to:\n",
     "  - `../data/processed/housing_with_features.csv`\n",
     "\n",
-    "### Next Steps\n",
-    "\n",
-    "- **03_target_preparation.ipynb**\n",
-    "  - Define and validate:\n",
-    "    - `Good_Investment` (classification target)\n",
-    "    - `Future_Price_5Y` (regression target)\n",
-    "  - Inspect target distributions and class balance.\n",
-    "\n",
-    "- **04_classification_model.ipynb**\n",
-    "  - Train and evaluate classification models.\n",
-    "\n",
-    "- **05_regression_model.ipynb**\n",
-    "  - Train and evaluate regression models.\n",
     "\n"
    ]
   },
