--- a/notebooks/04_hyperparameter_tuning.ipynb
+++ b/notebooks/04_hyperparameter_tuning.ipynb
@@ -96,7 +96,7 @@
     "from src.features.build_features import validate_features\n",
     "from src.data.load import load_raw_data\n",
     "from src.models import set_mlflow_experiment, log_requirements\n",
-    "from src.models import train_baseline_models\n",
+    "from src.models import train_baseline_models , tune_models_with_random_search\n",
     "\n",
     "# ------------------------------------------------------\n",
     "# Load processed dataset\n",
@@ -380,19 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cfe2bf63-2b23-4fe3-9799-1149d51b0c9c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tune_models_with_random_search' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m clf_results, reg_results \u001b[38;5;241m=\u001b[39m \u001b[43mtune_models_with_random_search\u001b[49m(\n\u001b[0;32m      2\u001b[0m     df\u001b[38;5;241m=\u001b[39mdf,\n\u001b[0;32m      3\u001b[0m     sample_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50_000\u001b[39m,                \n\u001b[0;32m      4\u001b[0m     n_iter\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m15\u001b[39m,                          \n\u001b[0;32m      5\u001b[0m     cv\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m,                                \n\u001b[0;32m      6\u001b[0m     models_dir\u001b[38;5;241m=\u001b[39mPROJECT_ROOT \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodels\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[0;32m      7\u001b[0m )\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mClassification – tuned model comparison (test metrics):\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     10\u001b[0m display(pd\u001b[38;5;241m.\u001b[39mDataFrame(clf_results)\u001b[38;5;241m.\u001b[39mT)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'tune_models_with_random_search' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n",
+      "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n",
+      "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n"
      ]
     }
    ],
@@ -427,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_dir = project_root / \"models\"\n",
+    "models_dir = PROJECT_ROOT / \"models\"\n",
     "from src.config import BEST_CLASSIFIER, BEST_REGRESSOR\n",
     "\n",
     "tuned_clf_path = models_dir / BEST_CLASSIFIER\n",
