Fix metadata path and Streamlit deployment issues

--- a/notebooks/04_hyperparameter_tuning.ipynb
+++ b/notebooks/04_hyperparameter_tuning.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cfe2bf63-2b23-4fe3-9799-1149d51b0c9c",
    "metadata": {},
    "outputs": [
@@ -390,8 +390,132 @@
      "text": [
       "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n",
       "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n",
-      "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n"
+      "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n",
+      "Fitting 3 folds for each of 15 candidates, totalling 45 fits\n",
+      "✔ Saved tuned classification model to: D:\\Labmentix\\2nd Project\\Real_Estate_Investment_Advisor\\models\\tuned_classification_model.pkl\n",
+      "✔ Saved tuned regression model to    : D:\\Labmentix\\2nd Project\\Real_Estate_Investment_Advisor\\models\\tuned_regression_model.pkl\n",
+      "📌 MLflow run_id for best models (use this for registry): e9cafe4a522c4190b09848c200406f36\n",
+      "\n",
+      "Classification – tuned model comparison (test metrics):\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>roc_auc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>rf_classifier</th>\n",
+       "      <td>0.6719</td>\n",
+       "      <td>0.563552</td>\n",
+       "      <td>0.277429</td>\n",
+       "      <td>0.371817</td>\n",
+       "      <td>0.665726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>xgb_classifier</th>\n",
+       "      <td>0.6699</td>\n",
+       "      <td>0.554223</td>\n",
+       "      <td>0.290571</td>\n",
+       "      <td>0.381256</td>\n",
+       "      <td>0.664841</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                accuracy  precision    recall        f1   roc_auc\n",
+       "rf_classifier     0.6719   0.563552  0.277429  0.371817  0.665726\n",
+       "xgb_classifier    0.6699   0.554223  0.290571  0.381256  0.664841"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Regression – tuned model comparison (test metrics):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mae</th>\n",
+       "      <th>rmse</th>\n",
+       "      <th>r2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>rf_regressor</th>\n",
+       "      <td>37.648658</td>\n",
+       "      <td>50.666223</td>\n",
+       "      <td>0.943499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>xgb_regressor</th>\n",
+       "      <td>37.124057</td>\n",
+       "      <td>50.258955</td>\n",
+       "      <td>0.944404</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     mae       rmse        r2\n",
+       "rf_regressor   37.648658  50.666223  0.943499\n",
+       "xgb_regressor  37.124057  50.258955  0.944404"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -420,10 +544,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "afaf93f9-ea32-45b7-8c3d-dec3825baf07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuned classification model exists: True\n",
+      "Tuned regression model exists    : True\n"
+     ]
+    }
+   ],
    "source": [
     "models_dir = PROJECT_ROOT / \"models\"\n",
     "from src.config import BEST_CLASSIFIER, BEST_REGRESSOR\n",
